manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapp
  namespace: taskapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    argocd.argoproj.io/sync-wave: "3"

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - taskapp.hph-info.xyz
      secretName: taskapp-tls

  rules:
    - host: taskapp.hph-info.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
